--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Olioharkka"
         tools:targetApi="31">
         <activity
+            android:name=".BattleActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoadGameActivity"
             android:exported="false" />
         <activity
@@ -22,7 +25,7 @@
             android:name=".AddActivity"
             android:exported="false" />
         <activity
-            android:name=".ListActivity"
+            android:name=".HomeActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
