--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Olioharkka"
         tools:targetApi="31">
         <activity
+            android:name=".CreditActivity"
+            android:exported="false" />
+        <activity
             android:name=".BattleActivity"
             android:exported="false" />
         <activity
@@ -20,9 +23,6 @@
             android:exported="false" />
         <activity
             android:name=".NewGameActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AddActivity"
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
